[package]
name = "cultus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
rand = "0.8.5"
rayon = "1.7.0"
async-nats = "0.29.0"
serde = "1.0.159"
config = "0.13.3"