[package]
name = "cultus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
config = "0.13.3"
bitvec = { version = "1", features = ["serde"] }
console = "0.15.5"
rgb = "0.8.36"
textplots = "0.8.0"